[package]
name = "SolNAS_client"
version = "0.1.0"
edition = "2024"

[dependencies]
#try to keep it short
eframe = "0.27"
egui = "0.27"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

reqwest = { version = "0.12", features = ["json", "blocking", "rustls-tls","multipart"] }
rfd = "0.14"
image = "0.24"